add navigate admin-account

--- a/CoCo/front-end/admin/index.html
+++ b/CoCo/front-end/admin/index.html
@@ -35,7 +35,7 @@
                             <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px; " />
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">ĐỔI MẬT
+                            <li><a class="dropdown-item" href="../admin/admin-account.html">ĐỔI MẬT
                                     KHẨU</a></li>
                             <li><a class="dropdown-item" href="../index.html">ĐĂNG XUẤT</a>
                             </li>
