--- a/CoCo/front-end/manager/products/product-list-page.html
+++ b/CoCo/front-end/manager/products/product-list-page.html
@@ -21,7 +21,7 @@
     <main>
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="../index.html">
                     <img class="logo-img" src="../../images/Logo.png" alt="logo">
                 </a>
                 <div id="togglers">
