--- a/CoCo/front-end/admin/managers/list-manager-page.html
+++ b/CoCo/front-end/admin/managers/list-manager-page.html
@@ -25,7 +25,7 @@
 
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="./">
+            <a class="navbar-brand" href="../index.html">
                 <img class="logo-img" src="../../images/Logo.png" alt="logo">
             </a>
             <div id="togglers">
