link index.html

--- a/CoCo/front-end/manager/index.html
+++ b/CoCo/front-end/manager/index.html
@@ -54,7 +54,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">GÓI SẢN PHẨM</a></li>
-                                <li><a class="dropdown-item" href="#">SẢN PHẨM</a></li>
+                                <li><a class="dropdown-item" href="./products/product-list-page.html">SẢN PHẨM</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
