--- a/CoCo/front-end/manager/products/product-list-page.html
+++ b/CoCo/front-end/manager/products/product-list-page.html
@@ -38,7 +38,7 @@
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><a class="dropdown-item" href="#">ĐỔI MẬT
                                     KHẨU</a></li>
-                            <li><a class="dropdown-item" href="../index.html">ĐĂNG XUẤT</a>
+                            <li><a class="dropdown-item" href="../../index.html">ĐĂNG XUẤT</a>
                             </li>
                         </ul>
                     </div>
@@ -55,7 +55,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">GÓI SẢN PHẨM</a></li>
-                                <li><a class="dropdown-item" href="#">SẢN PHẨM</a></li>
+                                <li><a class="dropdown-item" href="./product-list-page.html">SẢN PHẨM</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
