--- a/CoCo/front-end/manager/products/product-detail-page.html
+++ b/CoCo/front-end/manager/products/product-detail-page.html
@@ -22,11 +22,25 @@
                 <a class="navbar-brand" href="../index.html">
                     <img class="logo-img" src="../../images/Logo.png" alt="logo">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <div id="togglers">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="btn-group" style="float:right;">
+                        <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <img class="rounded-circle" src="../../images/avatar.jpg" style="width:50px; " />
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#">ĐỔI MẬT
+                                    KHẨU</a></li>
+                            <li><a class="dropdown-item" href="../../index.html">ĐĂNG XUẤT</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav m-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -39,7 +53,7 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#">GÓI SẢN PHẨM</a></li>
-                                <li><a class="dropdown-item" href="#">SẢN PHẨM</a></li>
+                                <li><a class="dropdown-item" href="./product-list-page.html">SẢN PHẨM</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
