--- a/CoCo/front-end/admin/admin-account.html
+++ b/CoCo/front-end/admin/admin-account.html
@@ -64,9 +64,9 @@
                             ĐỊA ĐIỂM
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./addresses/address-detail-page.html">XEM DANH
+                            <li><a class="dropdown-item" href="#">XEM DANH
                                     SÁCH</a></li>
-                            <li><a class="dropdown-item" href="./addresses/add-address-page.html">THÊM ĐỊA
+                            <li><a class="dropdown-item" href="#">THÊM ĐỊA
                                     ĐIỂM</a>
                             </li>
                         </ul>
@@ -91,10 +91,7 @@
                               </div>
                               <div id="name"></div>
                               <div class="button">
-                                  <button type="button" class="custom-btn btn btn-dark text-white btn-sm" onclick="window.location.href='./list-manager-page.html'">Đổi mật khẩu</button>
-                              </div>
-                              <div class="button">
-                                <button type="button" class="exit-btn btn btn-dark text-white btn-sm" onclick="window.location.href='./list-manager-page.html'">Đăng xuất</button>
+                                <button type="button" class="exit-btn btn btn-dark text-white btn-sm" onclick="window.location.href='../index.html'">Đăng xuất</button>
                             </div>
                         </div>
                       </div>
@@ -123,10 +120,10 @@
                             </form>
                             <div class="row-button">
                                 <div class="col-sm-6">
-                                  <button type="button" class="btn custom-btn text-white" onclick="window.location.href='./list-manager-page.html'">Lưu</button>
+                                  <button type="button" class="btn custom-btn text-white" onclick="window.location.href='./admin-account.html'">Lưu</button>
                                 </div>
                                 <div class="col-sm-6">
-                                    <button type="button" class="btn exit-btn text-white" onclick="window.location.href='./list-manager-page.html'">Hủy</button>
+                                    <button type="button" class="btn exit-btn text-white" onclick="window.location.href='./admin-account.html'">Hủy</button>
                                   </div>
                             </div>
                         </div>
