--- a/CoCo/front-end/admin/index.html
+++ b/CoCo/front-end/admin/index.html
@@ -66,9 +66,9 @@
                                 ĐỊA ĐIỂM
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./addresses/address-detail-page.html">XEM DANH
+                                <li><a class="dropdown-item" href="#">XEM DANH
                                         SÁCH</a></li>
-                                <li><a class="dropdown-item" href="./addresses/add-address-page.html">THÊM ĐỊA
+                                <li><a class="dropdown-item" href="#">THÊM ĐỊA
                                         ĐIỂM</a>
                                 </li>
                             </ul>
