--- a/CoCo/front-end/admin/managers/list-manager-history-page.html
+++ b/CoCo/front-end/admin/managers/list-manager-history-page.html
@@ -42,7 +42,7 @@
                   <ul class="dropdown-menu dropdown-menu-end">
                       <li><a class="dropdown-item" href="../admin-account.html">ĐỔI MẬT
                               KHẨU</a></li>
-                      <li><a class="dropdown-item" href="../index.html">ĐĂNG XUẤT</a>
+                      <li><a class="dropdown-item" href="../../index.html">ĐĂNG XUẤT</a>
                       </li>
                   </ul>
               </div>
@@ -71,9 +71,9 @@
                             ĐỊA ĐIỂM
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./addresses/address-detail-page.html">XEM DANH
+                            <li><a class="dropdown-item" href="#">XEM DANH
                                     SÁCH</a></li>
-                            <li><a class="dropdown-item" href="./addresses/add-address-page.html">THÊM ĐỊA
+                            <li><a class="dropdown-item" href="#">THÊM ĐỊA
                                     ĐIỂM</a>
                             </li>
                         </ul>
