--- a/CoCo/front-end/admin/managers/manager-details-page.html
+++ b/CoCo/front-end/admin/managers/manager-details-page.html
@@ -39,7 +39,7 @@
                   <ul class="dropdown-menu dropdown-menu-end">
                       <li><a class="dropdown-item" href="../admin-account.html">ĐỔI MẬT
                               KHẨU</a></li>
-                      <li><a class="dropdown-item" href="../index.html">ĐĂNG XUẤT</a>
+                      <li><a class="dropdown-item" href="../../index.html">ĐĂNG XUẤT</a>
                       </li>
                   </ul>
               </div>
@@ -52,12 +52,12 @@
                             QUẢN LÝ
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./managers/list-manager-page.html">XEM DANH
+                            <li><a class="dropdown-item" href="./list-manager-page.html">XEM DANH
                                     SÁCH</a>
                             </li>
-                            <li><a class="dropdown-item" href="./managers/add-manager-page.html">THÊM NGƯỜI QUẢN
+                            <li><a class="dropdown-item" href="./add-manager-page.html">THÊM NGƯỜI QUẢN
                                     LÝ</a></li>
-                            <li><a class="dropdown-item" href="./managers/list-manager-history-page.html">LỊCH
+                            <li><a class="dropdown-item" href="./list-manager-history-page.html">LỊCH
                                     SỬ
                                     HOẠT ĐỘNG</a></li>
                         </ul>
@@ -68,9 +68,9 @@
                             ĐỊA ĐIỂM
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./addresses/address-detail-page.html">XEM DANH
+                            <li><a class="dropdown-item" href="#">XEM DANH
                                     SÁCH</a></li>
-                            <li><a class="dropdown-item" href="./addresses/add-address-page.html">THÊM ĐỊA
+                            <li><a class="dropdown-item" href="#">THÊM ĐỊA
                                     ĐIỂM</a>
                             </li>
                         </ul>
