update banner path

--- a/CoCo/front-end/manager/products/product-list-page.html
+++ b/CoCo/front-end/manager/products/product-list-page.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </nav>
-        <img src="/CoCo/front-end/images/banner.png" alt="banner" class="banner">
+        <img src="../../images/banner.png" alt="banner" class="banner">
         <div class="content">
             <div class="path">
                 <a href="../index.html">Trang chủ > </a>
