--- a/CoCo/front-end/manager/products/add-product-page.html
+++ b/CoCo/front-end/manager/products/add-product-page.html
@@ -134,7 +134,7 @@
                         <div class="footer-contact">
                             <span class="fa-solid fa-envelope"></span>
                             <span>coco123@gmail.com</span>
-                            <img src="/CoCo/front-end/images/Logo.png" alt="logo" style="width:200px;" />
+                            <img src="../../images/Logo.png" alt="logo" style="width:200px;" />
                         </div>
 
                     </div>
