--- a/CoCo/front-end/index.html
+++ b/CoCo/front-end/index.html
@@ -48,7 +48,7 @@
                 <a href="#" class="password-missing">Quên mật khẩu?</a>
             </div>
 
-            <div style="clear:both; float:right; width: 500px; padding-top: 50px;">
+            <div style="clear:both; float:right; max-width: 500px; padding-top: 50px;">
                 <h3 style="font-style: italic;">Bạn muốn vào phân hệ người dùng nào?</h3>
                 <ul>
                     <li><a style="font-style: italic;" href="./admin/">QUẢN TRỊ VIÊN</a>
