--- a/CoCoPay/front-end/user/index.html
+++ b/CoCoPay/front-end/user/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
-    <link rel="stylesheet" href="css/sign-in.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>CoCoPay</title>
 </head>
 
@@ -21,32 +21,35 @@
         <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+                    <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
                 </a>
+            </div>
+            <div class="btn-group" style="float:right;">
+                <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                    <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px; " />
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end">
+                    <li><a class="dropdown-item" href="#">ĐỔI MẬT
+                            KHẨU</a></li>
+                    <li><a class="dropdown-item" href="../index.html">ĐĂNG XUẤT</a>
+                    </li>
+                </ul>
             </div>
         </nav>
         <section>
-            <img src="images/banner.png" alt="banner" class="banner">
+            <img src="../images/banner.png" alt="banner" class="banner">
         </section>
 
         <section class="content container-fluid py-5">
-            <div class="login-form py-5 px-5">
-                <form>
-                    <div class="form-floating mb-3">
-                        <input class="form-control border-2 border-dark" id="floatingInput"
-                            placeholder="0123456789">
-                        <label for="floatingInput">Số CMND/CCCD</label>
-                    </div>
-                    <div class="form-floating">
-                        <input type="password" class="form-control border-2 border-dark" id="floatingPassword"
-                            placeholder="Mật khẩu">
-                        <label for="floatingPassword">Mật khẩu</label>
-                    </div>
-                    <button type="submit" class="sign-in">ĐĂNG NHẬP</button>
-                </form>
-                <a href="#" class="password-missing">Quên mật khẩu?</a>
-            </div>
-
+            <h2><p>Số dư: <strong>1.000.000 VNĐ</strong></p></h2>
+            <form>
+                <div class="form-floating mb-3">
+                    <input class="form-control border-2 border-dark" id="floatingInput" placeholder="0">
+                    <label for="floatingInput">Nạp tiền (VNĐ)</label>
+                </div>
+                <button type="submit" class="sign-in">Xác nhận</button>
+            </form>
         </section>
     </main>
 
