--- a/CoCo/front-end/related-people/cart.html
+++ b/CoCo/front-end/related-people/cart.html
@@ -146,7 +146,11 @@
                         </button>
                     </div>
                 </div>
-
+                <div id="total-cost">
+                    <i class="fa-solid fa-sack-dollar fa-xl"></i>
+                    <div class="total-cost-text" style="color: #398ab9; margin-left: 5px;">Tổng cộng:&NonBreakingSpace;</div>
+                    <div class="total-cost-text" style="color: red;">925,000đ</div>
+                </div>
             </div>
 
             <div id="cart-buttons">
