--- a/CoCo/front-end/admin/managers/list-manager-history-page.html
+++ b/CoCo/front-end/admin/managers/list-manager-history-page.html
@@ -176,7 +176,7 @@
                         <div class="footer-contact">
                             <span class="fa-solid fa-envelope"></span>
                             <span>coco123@gmail.com</span>
-                            <img src="../../images/Logo.png" alt="logo" style="width:200px;" />
+                            <img src="/images/Logo.png" alt="logo" style="width:200px;"/>
                         </div>
 
                     </div>
