fix footer homapage admin,manager,related-people to js

--- a/CoCo/front-end/index.html
+++ b/CoCo/front-end/index.html
@@ -69,7 +69,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c370f69368.js" crossorigin="anonymous"></script>
-    <script src="js/footer.js"></script>
+    <script src="/js/footer.js"></script>
 </body>
 
 </html>
