--- a/CoCo/front-end/related-people/index.html
+++ b/CoCo/front-end/related-people/index.html
@@ -63,13 +63,14 @@
         </section>
 
         <footer id="footer"></footer>
+        <script src="/js/footer.js"></script>
+        <script>handleFooter();</script>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c370f69368.js" crossorigin="anonymous"></script>
-    <script src="/js/footer.js"></script>
 </body>
 
 </html>
