--- a/CoCo/front-end/related-people/managed-history.html
+++ b/CoCo/front-end/related-people/managed-history.html
@@ -218,37 +218,9 @@
         </div>
         </div>
 
-        <footer class="footer">
-            <div class="footer-top">
-                <div class="footer-box">
-                    <h3>VỀ CHÚNG TÔI</h3>
-                    <p>CoCo là website quản lý danh sách người liên quan đến Covid-19, đồng thời cung cấp phương thức
-                        thanh toán trực tuyến để mua nhu yếu phẩm ở các địa điểm cách ly và điều trị.</p>
-                </div>
-                <div class="footer-box">
-                    <h3>LIÊN HỆ</h3>
-                    <div>
-                        <div class="footer-contact">
-                            <span class="fa-solid fa-phone"></span>
-                            <span>+84945335984</span>
-                        </div>
-                        <div class="footer-contact">
-                            <span class="fa-solid fa-envelope"></span>
-                            <span>coco123@gmail.com</span>
-                            <img src="../images/Logo.png" alt="logo" style="width:200px;" />
-                        </div>
-
-                    </div>
-                </div>
-            </div>
-            <div class="footer-bottom">
-                <hr style="border: 2px solid white;background-color: white; width: 98%" />
-                <div class="footer-bottom-slogan">
-                    <span style="float: left;">Cùng nhau vượt qua Đại dịch Covid-19</span>
-                    <span style="float: right;">2022</span>
-                </div>
-            </div>
-        </footer>
+        <footer id="footer"></footer>
+        <script src="/js/footer.js"></script>
+        <script>handleFooter();</script>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
