create admin address flow

--- a/CoCo/front-end/admin/addresses/list-addresses-page.html
+++ b/CoCo/front-end/admin/addresses/list-addresses-page.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../css/search-bar-style.css">
     <link rel="stylesheet" href="../css/table-style.css">
     <link rel="stylesheet" href="../css/pagination.css">
-    <link rel="stylesheet" href="./css/list-manager-history-style.css">
+    <link rel="stylesheet" href="./css/list-addresses-style.css">
     <title>Xem lịch sử hoạt động người quản lý</title>
 </head>
 
@@ -55,12 +55,12 @@
                             QUẢN LÝ
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./list-manager-page.html">XEM DANH
+                            <li><a class="dropdown-item" href="../managers/list-manager-page.html">XEM DANH
                                     SÁCH</a>
                             </li>
-                            <li><a class="dropdown-item" href="./add-manager-page.html">THÊM NGƯỜI QUẢN
+                            <li><a class="dropdown-item" href="../managers/add-manager-page.html">THÊM NGƯỜI QUẢN
                                     LÝ</a></li>
-                            <li><a class="dropdown-item" href="./list-manager-history-page.html">LỊCH
+                            <li><a class="dropdown-item" href="../managers/list-manager-history-page.html">LỊCH
                                     SỬ
                                     HOẠT ĐỘNG</a></li>
                         </ul>
@@ -71,9 +71,9 @@
                             ĐỊA ĐIỂM
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../addresses/list-addresses-page.html">XEM DANH
+                            <li><a class="dropdown-item" href="./list-addresses-page.html">XEM DANH
                                     SÁCH</a></li>
-                            <li><a class="dropdown-item" href="../addresses/add-address-page.html">THÊM ĐỊA
+                            <li><a class="dropdown-item" href="./add-address-page.html">THÊM ĐỊA
                                     ĐIỂM</a>
                             </li>
                         </ul>
@@ -87,8 +87,8 @@
         <div class="container">
             <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb" class="nav-breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="./list-manager-page.html">Người quản lý</a></li>
-                  <li class="breadcrumb-item active" aria-current="page">Xem danh sách lịch sử hoạt động người quản lý</li>
+                  <li class="breadcrumb-item"><a href="./list-manager-page.html">Địa điểm cách ly, điều trị</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Xem danh sách địa điểm cách ly, điều trị</li>
                 </ol>
               </nav>
               <div class="searchbar">
@@ -141,7 +141,7 @@
                 </div>
               </div>
             </div>
-            <div id="list-manager-history-table" class="table-responsive" style="height: 360px; width: 80%; margin: auto;"></div>
+            <div id="list-addresses-table" class="table-responsive" style="height: 360px; width: 80%; margin: auto;"></div>
             <div class="page-container">
                 <button class="first-page" disabled>
                   <i class="fas fa-angle-double-left"></i>
