--- a/CoCo/front-end/admin/managers/add-manager-page.html
+++ b/CoCo/front-end/admin/managers/add-manager-page.html
@@ -67,9 +67,9 @@
                             ĐỊA ĐIỂM
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./addresses/address-detail-page.html">XEM DANH
+                            <li><a class="dropdown-item" href="../addresses/list-addresses-page.html">XEM DANH
                                     SÁCH</a></li>
-                            <li><a class="dropdown-item" href="./addresses/add-address-page.html">THÊM ĐỊA
+                            <li><a class="dropdown-item" href="../addresses/add-address-page.html">THÊM ĐỊA
                                     ĐIỂM</a>
                             </li>
                         </ul>
