--- a/CoCo/front-end/admin/addresses/add-address-page.html
+++ b/CoCo/front-end/admin/addresses/add-address-page.html
@@ -5,72 +5,146 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+        rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+        crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="./css/add-address-style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-    <title>Document</title>
+    <title>Thêm địa điểm cách ly, điều trị</title>
 </head>
 
 <body>
-    <main>
-        <nav class="navbar">
-            <img src="../../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
-            <ul class="nav-list">
-                <li><a href="#" class="nav-links">QUẢN LÝ</a></li>
-                <li><a href="#" class="nav-links">ĐỊA ĐIỂM</a></li>
-            </ul>
-            <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
-        </nav>
+    <main class="index">
+
+      <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../index.html">
+                <img class="logo-img" src="../../images/Logo.png" alt="logo">
+            </a>
+            <div id="togglers">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                  data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                  aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="btn-group" style="float:right;">
+                  <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown"
+                      aria-expanded="false">
+                      <img class="rounded-circle" src="../../images/avatar.jpg" style="width:50px; " />
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-end">
+                      <li><a class="dropdown-item" href="../admin-account.html">ĐỔI MẬT
+                              KHẨU</a></li>
+                      <li><a class="dropdown-item" href="../index.html">ĐĂNG XUẤT</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            QUẢN LÝ
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="../managers/list-manager-page.html">XEM DANH
+                                    SÁCH</a>
+                            </li>
+                            <li><a class="dropdown-item" href="../managers/add-manager-page.html">THÊM NGƯỜI QUẢN
+                                    LÝ</a></li>
+                            <li><a class="dropdown-item" href="../managers/list-manager-history-page.html">LỊCH
+                                    SỬ
+                                    HOẠT ĐỘNG</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            ĐỊA ĐIỂM
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="./address-detail-page.html">XEM DANH
+                                    SÁCH</a></li>
+                            <li><a class="dropdown-item" href="./add-address-page.html">THÊM ĐỊA
+                                    ĐIỂM</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+        
         <img src="../../images/banner.png" alt="banner" class="banner">
 
         <div class="container">
-            <div class="breadcrumb">
-                <p></p>
-            </div>
+            <nav style="--bs-breadcrumb-divider: '>'; --bs-breadcrumb-item-padding-x: 2px; --bs-breadcrumb-divider-color: #A19C9C; --bs-breadcrumb-font-size: 24sp;" aria-label="breadcrumb" class="nav-breadcrumb">
+                <ol class="breadcrumb">
+                  <li class="breadcrumb-item"><a href="./list-addresses-page.html">Địa điểm cách ly, điều trị</a></li>
+                  <li class="breadcrumb-item active" aria-current="page">Thêm địa điểm cách ly, điều trị</li>
+                </ol>
+              </nav>
             <div class="content">
-                <h2 class="form-heading">Thêm địa điểm cách ly, điều trị</h2>
-                <form class="add-address-form">
-                    <table>
-                        <tr class="form-input-text">
-                            <th colspan="2"><label for="name">Tên địa điểm </label></th>
-                            <td colspan="4"><input type="text" id="name" name="name" value=""></td>
-                        </tr>
-                        <tr class="form-input-text">
-                            <th colspan="2"><label for="number">Số thu dụng</label></th>
-                            <td colspan="4"><input type="number" id="number" name="number" value=""></td>
-                        </tr>
-                        <tr class="form-input-text">
-                            <th ><label for="re-password">Sức chứa</label></th>
-                            <td colspan="2"><input type="text" id="re-password" name="re-password" value=""></td>
-                            <th><label for="re-password">Số lượng hiện tại</label></th>
-                            <td colspan="2"><input type="text" id="re-password" name="re-password" value=""></td>
-                        </tr>
-                        <tr class="form-input-2checkbox">
-                            <th>Loại địa điểm</th>
-                            <td colspan="2">
-                                <input name = "address-type" id="isolation" value="isolation" type="checkbox">
-                                <label for="isolation">Cách ly</label>
-                            </td>
-                            <td colspan="2">
-                                <input name = "address-type" id="treatment" value="treatment" type="checkbox">
-                                <label for="treatment">Điều trị</label>
-                            </td>
-                        </tr>
-                    </table>
-                    <div class="button-form">
-                        <input type="submit" value="Lưu">
-                        <input type="submit" value="Hủy">
+                <h3 class="form-heading mb-3 p-2 ">Thêm địa điểm cách ly, điều trị</h3>
+                <form class="form-add-manager p-2">
+                  <div class="form-group row">
+                      <label for="name" class="col-lg-5 col-sm-5 col-form-label">Tên địa điểm</label>
+                      <div class="col-lg-7 col-sm-7">
+                          <input type="text" class="form-control" id="name">
+                      </div> 
+                  </div>
+                  <div class="form-group row">
+                    <label for="number" class="col-lg-5 col-sm-5 col-form-label">Số thu dụng</label>
+                    <div class="col-lg-7 col-sm-7">
+                      <input type="text" class="form-control" id="number">
                     </div>
-                    
+                  </div>
+                  <div class="form-group row">
+                    <div class="col-sm-7">
+                      <table>
+                        <tr>
+                          <th><label for="patient" class="p-2">Sức chứa</label></th>
+                          <td><input id="patient" type="text" class="form-control col-lg-3 col-md-3"></td>
+                          <th><label for="necessities">Số lượng hiện tại</label></th>
+                          <td><input id="necessities" type="text" class="form-control col-lg-3 col-md-3"></td>
+                        </tr>
+                      </table>
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <label  class="col-sm-5 col-form-label">Loại địa điểm</label>
+                    <div class="col-sm-7">
+                      <table>
+                        <tr>
+                          <td><input name = "patient" id="patient" value="patient" type="checkbox"></td>
+                          <th><label for="patient" class="p-2">Cách ly</label></th>
+                        </tr>
+                        <tr>
+                          <td><input name = "necessities" id="necessities" value="necessities" type="checkbox"></td>
+                          <th><label for="necessities">Điều trị</label></th>
+                        </tr>
+                      </table>
+                    </div>
+                  </div>
+                  <div class="row button">
+                    <div class="col-sm-10">
+                      <button type="button" class="btn" onclick="window.location.href='./list-manager-page.html'">Lưu</button>
+                    </div>
+                  </div>
                 </form>
             </div>
         </div>
-
         <footer id="footer"></footer>
         <script src="/js/footer.js"></script>
         <script>handleFooter();</script>
     </main>
 
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 
 </html>
