load data list addresses table

--- a/CoCo/front-end/admin/addresses/add-address-page.html
+++ b/CoCo/front-end/admin/addresses/add-address-page.html
@@ -120,12 +120,12 @@
                     <div class="col-sm-7">
                       <table>
                         <tr>
-                          <td><input name = "patient" id="patient" value="patient" type="checkbox"></td>
-                          <th><label for="patient" class="p-2">Cách ly</label></th>
+                          <td><input name = "isolation" id="isolation" value="isolation" type="checkbox"></td>
+                          <th><label for="isolation" class="p-2">Cách ly</label></th>
                         </tr>
                         <tr>
-                          <td><input name = "necessities" id="necessities" value="necessities" type="checkbox"></td>
-                          <th><label for="necessities">Điều trị</label></th>
+                          <td><input name = "treatment" id="treatment" value="treatment" type="checkbox"></td>
+                          <th><label for="treatment">Điều trị</label></th>
                         </tr>
                       </table>
                     </div>
