--- a/CoCo/front-end/admin/addresses/list-addresses-page.html
+++ b/CoCo/front-end/admin/addresses/list-addresses-page.html
@@ -20,9 +20,8 @@
     <title>Xem lịch sử hoạt động người quản lý</title>
 </head>
 
-<body onload="loadListManagerHistoryTable()">
+<body onload="loadListAddressesTable()">
     <main class="index">
-
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
@@ -166,7 +165,7 @@
 
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="js/add-list-manager-history-table.js"></script>
+    <script src="js/add-list-addresses-table.js"></script>
     <script src="../js/pagination.js"></script>
 </body>
 
