--- a/CoCo/front-end/admin/managers/list-manager-page.html
+++ b/CoCo/front-end/admin/managers/list-manager-page.html
@@ -20,7 +20,7 @@
     <title>Xem danh sách người quản lý</title>
 </head>
 
-<body onload="loadListManagerTable()">
+<body>
     <main class="index">
 
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
