--- a/CoCo/front-end/admin/managers/manager-details-page.html
+++ b/CoCo/front-end/admin/managers/manager-details-page.html
@@ -17,7 +17,7 @@
     <title>Xem chi tiết thông tin người quản lý</title>
 </head>
 
-<body onload="loadData('Nguyen Van A')">
+<body>
     <main class="index">
 
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
