--- a/CoCo/front-end/admin/addresses/list-addresses-page.html
+++ b/CoCo/front-end/admin/addresses/list-addresses-page.html
@@ -20,7 +20,7 @@
     <title>Xem lịch sử hoạt động người quản lý</title>
 </head>
 
-<body onload="loadListAddressesTable()">
+<body>
     <main class="index">
       <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
