transform navbar homepages to js

--- a/CoCo/front-end/admin/admin-account.html
+++ b/CoCo/front-end/admin/admin-account.html
@@ -48,14 +48,10 @@
                             QUẢN LÝ
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./managers/list-manager-page.html">XEM DANH
-                                    SÁCH</a>
+                            <li><a class="dropdown-item" href="./managers/list-manager-page.html">XEM DANH SÁCH</a>
                             </li>
-                            <li><a class="dropdown-item" href="./managers/add-manager-page.html">THÊM NGƯỜI QUẢN
-                                    LÝ</a></li>
-                            <li><a class="dropdown-item" href="./managers/list-manager-history-page.html">LỊCH
-                                    SỬ
-                                    HOẠT ĐỘNG</a></li>
+                            <li><a class="dropdown-item" href="./managers/add-manager-page.html">THÊM NGƯỜI QUẢN LÝ</a></li>
+                            <li><a class="dropdown-item" href="./managers/list-manager-history-page.html">LỊCH SỬ HOẠT ĐỘNG</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -64,10 +60,8 @@
                             ĐỊA ĐIỂM
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./addresses/list-addresses-page.html">XEM DANH
-                                    SÁCH</a></li>
-                            <li><a class="dropdown-item" href="./addresses/add-address-page.html">THÊM ĐỊA
-                                    ĐIỂM</a>
+                            <li><a class="dropdown-item" href="./addresses/list-addresses-page.html">XEM DANH SÁCH</a></li>
+                            <li><a class="dropdown-item" href="./addresses/add-address-page.html">THÊM ĐỊA ĐIỂM</a>
                             </li>
                         </ul>
                     </li>
