--- a/CoCo/front-end/index.html
+++ b/CoCo/front-end/index.html
@@ -18,13 +18,10 @@
 
 <body>
     <main class="index">
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img class="logo-img" src="images/Logo.png" alt="logo">
-                </a>
-            </div>
-        </nav>
+        <nav></nav>
+        <script src="/js/navbar.js"></script>
+        <script>handleNavbar('guest');</script>
+
         <section>
             <img src="images/banner.png" alt="banner" class="banner">
         </section>
@@ -62,7 +59,7 @@
 
         </section>
         
-        <footer id="footer"></footer>
+        <footer></footer>
         <script src="/js/footer.js"></script>
         <script>handleFooter();</script>
     </main>
