--- a/CoCo/front-end/admin/index.html
+++ b/CoCo/front-end/admin/index.html
@@ -18,65 +18,10 @@
 
 <body>
     <main class="index">
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="./">
-                    <img class="logo-img" src="../images/Logo.png" alt="logo">
-                </a>
-                <div id="togglers">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="btn-group" style="float:right;">
-                        <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px; " />
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="../admin/admin-account.html">ĐỔI MẬT
-                                    KHẨU</a></li>
-                            <li><a class="dropdown-item" href="../index.html">ĐĂNG XUẤT</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                QUẢN LÝ
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./managers/list-manager-page.html">XEM DANH
-                                        SÁCH</a>
-                                </li>
-                                <li><a class="dropdown-item" href="./managers/add-manager-page.html">THÊM NGƯỜI QUẢN
-                                        LÝ</a></li>
-                                <li><a class="dropdown-item" href="./managers/list-manager-history-page.html">LỊCH
-                                        SỬ
-                                        HOẠT ĐỘNG</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                ĐỊA ĐIỂM
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="#">XEM DANH
-                                        SÁCH</a></li>
-                                <li><a class="dropdown-item" href="#">THÊM ĐỊA
-                                        ĐIỂM</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <nav></nav>
+        <script src="/js/navbar.js"></script>
+        <script>handleNavbar('admin');</script>
+
         <section>
             <img src="../images/banner.png" alt="banner" class="banner">
         </section>
@@ -85,7 +30,7 @@
             <h1 class="welcome" style="width:auto">Chào mừng đến với hệ thống quản lý Covid-19</h1>
         </section>
 
-        <footer id="footer"></footer>
+        <footer></footer>
         <script src="/js/footer.js"></script>
         <script>handleFooter();</script>
     </main>
