--- a/CoCo/front-end/admin/managers/list-manager-page.html
+++ b/CoCo/front-end/admin/managers/list-manager-page.html
@@ -22,66 +22,9 @@
 
 <body>
     <main class="index">
-
-      <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="../index.html">
-                <img class="logo-img" src="../../images/Logo.png" alt="logo">
-            </a>
-            <div id="togglers">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                  aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="btn-group" style="float:right;">
-                  <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown"
-                      aria-expanded="false">
-                      <img class="rounded-circle" src="../../images/avatar.jpg" style="width:50px; " />
-                  </button>
-                  <ul class="dropdown-menu dropdown-menu-end">
-                      <li><a class="dropdown-item" href="../admin-account.html">ĐỔI MẬT
-                              KHẨU</a></li>
-                      <li><a class="dropdown-item" href="../../index.html">ĐĂNG XUẤT</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            QUẢN LÝ
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="./list-manager-page.html">XEM DANH
-                                    SÁCH</a>
-                            </li>
-                            <li><a class="dropdown-item" href="./add-manager-page.html">THÊM NGƯỜI QUẢN
-                                    LÝ</a></li>
-                            <li><a class="dropdown-item" href="./list-manager-history-page.html">LỊCH
-                                    SỬ
-                                    HOẠT ĐỘNG</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            ĐỊA ĐIỂM
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../addresses/list-addresses-page.html">XEM DANH
-                                    SÁCH</a></li>
-                            <li><a class="dropdown-item" href="../addresses/add-address-page.html">THÊM ĐỊA
-                                    ĐIỂM</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+        <nav></nav>
+        <script src="/js/navbar.js"></script>
+        <script>handleNavbar('admin');</script>
         
         <img src="../../images/banner.png" alt="banner" class="banner">
 
@@ -117,7 +60,7 @@
               </div>
       </div>
 
-      <footer id="footer"></footer>
+      <footer></footer>
       <script src="/js/footer.js"></script>
       <script>handleFooter();</script>
     </main>
