--- a/CoCo/front-end/related-people/package-list.html
+++ b/CoCo/front-end/related-people/package-list.html
@@ -19,45 +19,10 @@
 
 <body>
     <main>
-        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">
-                    <img class="logo-img" src="../images/Logo.png" alt="logo">
-                </a>
-                <div id="togglers">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="btn-group" style="float:right;">
-                        <button type="button" class="avt btn rounded-circle" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            <img class="rounded-circle" src="../images/avatar.jpg" style="width:50px; " />
-                        </button>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#">ĐỔI MẬT
-                                    KHẨU</a></li>
-                            <li><a class="dropdown-item" href="../index.html">ĐĂNG XUẤT</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="information.html">THÔNG TIN CÁ NHÂN</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="package-list.html">NHU YẾU PHẨM</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">TÀI KHOẢN</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        <nav></nav>
+        <script src="/js/navbar.js"></script>
+        <script>handleNavbar('related-people');</script>
+
         <img src="../images/banner.png" alt="banner" class="banner">
         <div class="content" style="padding: 20px 20px;">
             <div class="path">
@@ -475,7 +440,7 @@
             </a>
         </div>
         </div>
-        <footer id="footer"></footer>
+        <footer></footer>
         <script src="/js/footer.js"></script>
         <script>handleFooter();</script>
     </main>
