fix list address page style

--- a/CoCo/front-end/admin/addresses/list-addresses-page.html
+++ b/CoCo/front-end/admin/addresses/list-addresses-page.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../css/search-bar-style.css">
     <link rel="stylesheet" href="../css/table-style.css">
     <link rel="stylesheet" href="../css/pagination.css">
+    <link rel="stylesheet" href="../css/button-add-style.css">
     <link rel="stylesheet" href="./css/list-addresses-style.css">
     <title>Xem lịch sử hoạt động người quản lý</title>
 </head>
@@ -101,6 +102,9 @@
                   <i class="fas fa-angle-double-right"></i>
                 </button>
           </div>
+          <div class="button-add" onclick="window.location.href='./add-address-page.html'">
+            <i class="fa-solid fa-plus fa-3x"></i>
+        </div>
       </div>
 
       <footer></footer>
