fix style add address page

--- a/CoCo/front-end/admin/addresses/add-address-page.html
+++ b/CoCo/front-end/admin/addresses/add-address-page.html
@@ -48,16 +48,14 @@
                     </div>
                   </div>
                   <div class="form-group row">
-                    <div class="col-sm-7">
-                      <table>
-                        <tr>
-                          <th><label for="patient" class="p-2">Sức chứa</label></th>
-                          <td><input id="patient" type="text" class="form-control col-lg-3 col-md-3"></td>
-                          <th><label for="necessities">Số lượng hiện tại</label></th>
-                          <td><input id="necessities" type="text" class="form-control col-lg-3 col-md-3"></td>
-                        </tr>
-                      </table>
-                    </div>
+                      <label for="tankage" class="col-lg-5 col-sm-5 col-form-label" style="margin-bottom: 5px;">Sức chứa</label>
+                      <div class="col-lg-7 col-sm-7">
+                        <input id="tankage" type="text" class="form-control" style="width: 80%; margin: 0px 5px;">
+                      </div> 
+                      <label for="cur-quantity" class="col-lg-5 col-sm-5 col-form-label">Số lượng hiện tại</label>
+                      <div class="col-lg-7 col-sm-7">
+                        <input id="cur-quantity" type="text" class="form-control" style="width: 80%; margin: 0px 5px;">
+                      </div> 
                   </div>
                   <div class="form-group row">
                     <label  class="col-sm-5 col-form-label">Loại địa điểm</label>
