fix style edit address detail page

--- a/CoCo/front-end/admin/addresses/address-detail-page.html
+++ b/CoCo/front-end/admin/addresses/address-detail-page.html
@@ -13,8 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/table-style.css">
-    <link rel="stylesheet" href="./css/manager-details-style.css">
-    <title>Xem chi tiết thông tin người quản lý</title>
+    <link rel="stylesheet" href="./css/address-detail-style.css">
+    <title>Xem chi tiết thông tin chi tiết địa điểm cách ly, điều trị/title>
 </head>
 
 <body onload="loadData('Nguyen Van A')">
